--- a/css/main.css
+++ b/css/main.css
@@ -363,4 +363,160 @@ body {
   max-width: 375px;
   margin: 0 auto;
   padding: 0 24px;
+}
+
+.header {
+  padding-top: 48px;
+  padding-bottom: 48px;
+  background-color: #014E56;
+}
+
+.header__inner {
+  display: flex;
+  justify-content: space-between;
+}
+
+.header__btn {
+  width: 20px;
+  height: 17px;
+  border: none;
+  background-color: transparent;
+  background-image: url(/images/image/hamburger.svg);
+  background-size: 20px 17px;
+}
+
+.hero {
+  padding-top: 24px;
+  padding-bottom: 197px;
+  background-image: url(/images/backgrounds/herobgm.png);
+  background-repeat: no-repeat;
+  background-position: center -136px;
+}
+
+.hero__inner {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.hero__title {
+  font-family: "Livvic";
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 48px;
+  margin: 0;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 40px;
+  color: #FFFFFF;
+}
+
+.hero__title-strong {
+  color: #f67e7e;
+}
+
+.hero__desc {
+  font-family: "Livvic";
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 28px;
+  margin-top: 18px;
+  margin-bottom: 0;
+  color: #FFFFFF;
+}
+
+.services {
+  position: relative;
+  padding-top: 100px;
+  padding-bottom: 64px;
+  background-image: url("/images/backgrounds/servicesbgm.png");
+  background-repeat: no-repeat;
+}
+
+.services__title-box {
+  max-width: 240px;
+  text-align: left;
+}
+
+.services__title-box::before {
+  position: absolute;
+  top: 68px;
+  width: 50px;
+  height: 4px;
+  background-color: #f67e7e;
+  content: "";
+}
+
+.services__title {
+  font-family: "Livvic";
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 48px;
+  margin: 0;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 32px;
+  color: #FFFFFF;
+}
+
+.services__list {
+  margin: 0;
+  padding-left: 0;
+  list-style: none;
+  text-align: center;
+}
+
+.services__item {
+  padding-top: 136px;
+  position: relative;
+}
+
+.services__item:first-child::before {
+  position: absolute;
+  top: 48px;
+  left: 128px;
+  width: 72px;
+  height: 72px;
+  background-color: transparent;
+  background-image: url("/images/image/servicesf.svg");
+  content: "";
+}
+
+.services__item:nth-child(2)::before {
+  position: absolute;
+  top: 48px;
+  left: 128px;
+  width: 72px;
+  height: 72px;
+  background-color: transparent;
+  background-image: url("/images/image/servicess.svg");
+  content: "";
+}
+
+.services__item:nth-child(3)::before {
+  position: absolute;
+  top: 48px;
+  left: 128px;
+  width: 72px;
+  height: 72px;
+  background-color: transparent;
+  background-image: url("/images/image/serviceth.svg");
+  content: "";
+}
+
+.services__item-title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 28px;
+  margin-bottom: 8px;
+  color: #F67E7E;
+}
+
+.services__desc {
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 25px;
+  margin: 0;
+  color: #FFFFFF;
+  opacity: 0.8;
 }/*# sourceMappingURL=main.css.map */
